@@ -37,6 +37,9 @@
 #include "php.h"
 #include "ea_restore.h"
 #include <math.h>
+#ifdef ZEND_ENGINE_2_1
+#include "zend_vm.h"
+#endif
 
 #ifdef HAVE_EACCELERATOR_STANDALONE_LOADER
 zend_extension* ZendOptimizer = NULL;
@@ -396,12 +399,10 @@ static void call_op_array_ctor_handler(zend_extension *extension, zend_op_array 
 
 static void decode_op(zend_op_array *to, zend_op *opline, unsigned int ops, 
         char **p, unsigned int* l TSRMLS_DC) {
-#ifdef ZEND_ENGINE_2
-#ifdef HAVE_EACCELERATOR_STANDALONE_LOADER
+#ifdef ZEND_ENGINE_2_1
+	ZEND_VM_SET_OPCODE_HANDLER(opline);
+#elif defined(ZEND_ENGINE_2)
     opline->handler = zend_opcode_handlers[opline->opcode];
-#else
-    opline->handler = get_opcode_handler(opline->opcode TSRMLS_CC);
-#endif
 #endif
     opline->lineno = decode32(p, l);
     ((loader_data*)EAG(mem))->lineno = opline->lineno;
