@@ -3,6 +3,7 @@
         * Fix restoring of opcode handler for php 5.0.5 when files are loaded
           from disk cache. This fixes bug #147
         * Some update in the release notes for the upcoming rc1
+        * Fix loader.c too so we don't get any linking errors. 
 
 2006-07-24  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
